<resources>
    <string name="app_name">Memory Game</string>
    <string name="action_settings">Settings</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="welcome_message">Welcome To The Memory Game!</string>
    <string name="insert_date">Please Insert Age</string>
    <string name="insert_name">Please Insert Your Name</string>
    <string name="confirm">Confirm</string>
    <string name="default_name">NoName</string>
    <string name="choose_diff">Choose your playing difficulty</string>
    <string name="default_age">0</string>
    <string name="button_easy">Easy</string>
    <string name="button_medium">Medium</string>
    <string name="button_hard">Hard</string>
    <string name="button_score">Best Scores</string>
    <string name="top_ten">Top 10 Scores</string>
    <string name="google_maps_API_key">AIzaSyAzG-7LMeTzZDNTeEPpsRtufHRx5yzfHEI</string>

    <string name="timer">0</string>

    <string-array name="random_imgs">
        <item>@drawable/image1</item>
        <item>@drawable/image2</item>
        <item>@drawable/image3</item>
        <item>@drawable/image4</item>
        <item>@drawable/image5</item>
        <item>@drawable/image6</item>
        <item>@drawable/image7</item>
        <item>@drawable/image8</item>
        <item>@drawable/image9</item>
        <item>@drawable/image10</item>
        <item>@drawable/image11</item>
        <item>@drawable/image12</item>
        <item>@drawable/image13</item>
        <item>@drawable/image14</item>
        <item>@drawable/image15</item>
        <item>@drawable/image16</item>
        <item>@drawable/image17</item>
        <item>@drawable/image18</item>
    </string-array>
    <string name="title_activity_score_maps">Map</string>


</resources>
